ciscoapps/k8sapps/ashurc.yaml

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    x: hellorc
  name: ashusvc1
  namespace: ashu-apps 
spec:
  ports:
  - port: 1234
    protocol: TCP
    targetPort: 80
  selector:
    x1: helloashu1
  type: NodePort
status:
  loadBalancer: {}
