ciscoapps/k8sapps/flaskappsvc.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels: # label of service 
    app: ashusvc1
  name: ashusvc1 # name of Service 
  namespace: ashu-apps # name of namespace 
spec:
  ports:
  - name: 1234-5000
    port: 1234 # port number of service 
    protocol: TCP
    targetPort: 5000  # pod port number 
  selector: # Pod FInder  -- use label of POD to find 
    run: ashuflaskpod1 # exact label of POD 
  type: NodePort # type of service 
status:
  loadBalancer: {}
